fix: WorktreeServiceTest 兼容 Java 8
Path.of() → Paths.get()，.orElseThrow() 添加显式 Supplier

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>